// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap basic table renders properly 1`] = `
<table
  class="table"
>
  <caption>
    Optional table caption.
  </caption>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap bordered table renders properly 1`] = `
<table
  class="table table-bordered"
>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap condensed table renders properly 1`] = `
<table
  class="table table-condensed"
>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap contextual classes table renders properly 1`] = `
<table
  class="table table-condensed"
>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="active"
    >
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr
      class="success"
    >
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        3
      </td>
      <td
        class=""
      >
        Paul
      </td>
      <td
        class=""
      >
        O’Shannessy
      </td>
      <td
        class=""
      >
        zpao
      </td>
    </tr>
    <tr
      class="warning"
    >
      <td
        class=""
      >
        4
      </td>
      <td
        class=""
      >
        Pete
      </td>
      <td
        class=""
      >
        Hunt
      </td>
      <td
        class=""
      >
        petehunt
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        5
      </td>
      <td
        class=""
      >
        Andrew
      </td>
      <td
        class=""
      >
        Clark
      </td>
      <td
        class=""
      >
        acdlite
      </td>
    </tr>
    <tr
      class="danger"
    >
      <td
        class=""
      >
        6
      </td>
      <td
        class=""
      >
        Nathan
      </td>
      <td
        class=""
      >
        Hunzaker
      </td>
      <td
        class=""
      >
        nhunzaker
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap hover table renders properly 1`] = `
<table
  class="table table-hover"
>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap responsive table renders properly 1`] = `
<div
  class="table-responsive"
>
  <table
    class="table"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          #
        </th>
        <th
          class=""
        >
          First Name
        </th>
        <th
          class=""
        >
          Last Name
        </th>
        <th
          class=""
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class=""
        >
          0
        </td>
        <td
          class=""
        >
          Dan
        </td>
        <td
          class=""
        >
          Abramov
        </td>
        <td
          class=""
        >
          gaearon
        </td>
      </tr>
      <tr>
        <td
          class=""
        >
          1
        </td>
        <td
          class=""
        >
          Sebastian
        </td>
        <td
          class=""
        >
          Markbåge
        </td>
        <td
          class=""
        >
          sebmarkbage
        </td>
      </tr>
      <tr>
        <td
          class=""
        >
          2
        </td>
        <td
          class=""
        >
          Sophie
        </td>
        <td
          class=""
        >
          Alpert
        </td>
        <td
          class=""
        >
          sophiebits
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bootstrap striped table renders properly 1`] = `
<table
  class="table table-striped"
>
  <thead>
    <tr>
      <th
        class=""
      >
        #
      </th>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        0
      </td>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        1
      </td>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        2
      </td>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Mock Client Pagination table renders 1`] = `
<div
  class="container-fluid"
>
  <table
    class="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Vyberte všechny řádky"
          class="table-view-pf-select"
          colspan="1"
          id="vybrat vše"
          index="0"
          rowspan="1"
        >
          <label
            class="control-label sr-only"
            for="vybrat vše"
          >
            Vyberte všechny řádky
          </label>
          <input
            id="vybrat vše"
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          class="sorting_asc sort sort-asc"
          colspan="1"
          index="1"
          rowspan="1"
        >
          Name
        </th>
        <th
          aria-label="Height"
          class="sorting sort sort-none"
          colspan="1"
          index="2"
          rowspan="1"
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          class="sorting sort sort-none"
          colspan="1"
          index="3"
          rowspan="1"
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          class="sorting sort sort-none"
          colspan="1"
          index="4"
          rowspan="1"
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          class="sorting sort sort-none"
          colspan="1"
          index="5"
          rowspan="1"
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          class=""
          colspan="2"
          index="6"
          rowspan="1"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat0"
          >
            vyberte řádek 0
          </label>
          <input
            id="vybrat0"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          Anakin Skywalker
        </td>
        <td
          class=""
        >
          188
        </td>
        <td
          class=""
        >
          blue
        </td>
        <td
          class=""
        >
          male
        </td>
        <td
          class=""
        >
          41.9BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat1"
          >
            vyberte řádek 1
          </label>
          <input
            id="vybrat1"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          Beru Whitesun lars
        </td>
        <td
          class=""
        >
          165
        </td>
        <td
          class=""
        >
          blue
        </td>
        <td
          class=""
        >
          female
        </td>
        <td
          class=""
        >
          47BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat2"
          >
            vyberte řádek 2
          </label>
          <input
            id="vybrat2"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          Biggs Darklighter
        </td>
        <td
          class=""
        >
          183
        </td>
        <td
          class=""
        >
          brown
        </td>
        <td
          class=""
        >
          male
        </td>
        <td
          class=""
        >
          24BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat3"
          >
            vyberte řádek 3
          </label>
          <input
            id="vybrat3"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          C-3PO
        </td>
        <td
          class=""
        >
          167
        </td>
        <td
          class=""
        >
          yellow
        </td>
        <td
          class=""
        >
          n/a
        </td>
        <td
          class=""
        >
          112BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat4"
          >
            vyberte řádek 4
          </label>
          <input
            id="vybrat4"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          Chewbacca
        </td>
        <td
          class=""
        >
          228
        </td>
        <td
          class=""
        >
          blue
        </td>
        <td
          class=""
        >
          male
        </td>
        <td
          class=""
        >
          200BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        class=""
        role="row"
      >
        <td
          class="table-view-pf-select"
        >
          <label
            class="control-label sr-only"
            for="vybrat5"
          >
            vyberte řádek 5
          </label>
          <input
            id="vybrat5"
            type="checkbox"
          />
        </td>
        <td
          class=""
        >
          Darth Vader
        </td>
        <td
          class=""
        >
          202
        </td>
        <td
          class=""
        >
          yellow
        </td>
        <td
          class=""
        >
          male
        </td>
        <td
          class=""
        >
          41.9BBY
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="table-view-pf-btn"
          >
            <button
              class="btn btn-default"
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          class="table-view-pf-actions"
        >
          <div
            class="dropdown-kebab-pf dropdown "
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle btn btn-default"
              id="myKebab"
              role="button"
              title=""
              type="button"
            >
              <span
                aria-hidden="true"
                class="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              class="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                class="divider"
                role="separator"
              />
              <li
                class=""
                role="presentation"
              >
                <a
                  href="#"
                  role="menuitem"
                  tabindex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <form
    class="content-view-pf-pagination table-view-pf-pagination clearfix "
  >
    <div
      class="form-group"
    >
      <div
        class="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-default"
          id="pagination-row-dropdown"
          role="button"
          type="button"
        >
          6 
          <span
            class="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          class="dropdown-menu"
          role="menu"
        >
          <li
            class="active"
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              6
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              10
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
        per page
      </span>
    </div>
    <div
      class="form-group"
    >
      <span>
        <span
          class="pagination-pf-items-current"
        >
          1-6
        </span>
         of 
        <span
          class="pagination-pf-items-total"
        >
          20
        </span>
      </span>
      <ul
        class="pagination pagination-pf-back"
      >
        <li
          class="disabled"
        >
          <a
            href="#"
            title="First Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-double-left i"
            />
          </a>
        </li>
        <li
          class="disabled"
        >
          <a
            href="#"
            title="Previous Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-left i"
            />
          </a>
        </li>
      </ul>
      <label
        class="sr-only control-label"
      >
        Current Page
      </label>
      <input
        class="pagination-pf-page form-control"
        type="text"
        value="1"
      />
      <span>
         of 
        <span
          class="pagination-pf-pages"
        >
          4
        </span>
      </span>
      <ul
        class="pagination pagination-pf-forward"
      >
        <li
          class=""
        >
          <a
            href="#"
            title="Next Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-right i"
            />
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="#"
            title="Last Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-double-right i"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`Mock Server Pagination table renders 1`] = `
<div
  class="container-fluid"
>
  <table
    class="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Select all rows"
          class="table-view-pf-select"
          colspan="1"
          index="0"
          rowspan="1"
        >
          <label
            class="control-label sr-only"
            for="selectAll"
          >
            Select all rows
          </label>
          <input
            id="selectAll"
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          class="sorting_asc"
          colspan="1"
          index="1"
          rowspan="1"
        >
          Name
        </th>
        <th
          aria-label="Height"
          class="sorting"
          colspan="1"
          index="2"
          rowspan="1"
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          class="sorting"
          colspan="1"
          index="3"
          rowspan="1"
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          class="sorting"
          colspan="1"
          index="4"
          rowspan="1"
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          class="sorting"
          colspan="1"
          index="5"
          rowspan="1"
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          class=""
          colspan="2"
          index="6"
          rowspan="1"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <form
    class="content-view-pf-pagination table-view-pf-pagination clearfix "
  >
    <div
      class="form-group"
    >
      <div
        class="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-default"
          id="pagination-row-dropdown"
          role="button"
          type="button"
        >
          6 
          <span
            class="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          class="dropdown-menu"
          role="menu"
        >
          <li
            class="active"
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              6
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              10
            </a>
          </li>
          <li
            class=""
            role="presentation"
          >
            <a
              href="#"
              role="menuitem"
              tabindex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
        per page
      </span>
    </div>
    <div
      class="form-group"
    >
      <span>
        <span
          class="pagination-pf-items-current"
        >
          1-0
        </span>
         of 
        <span
          class="pagination-pf-items-total"
        >
          0
        </span>
      </span>
      <ul
        class="pagination pagination-pf-back"
      >
        <li
          class="disabled"
        >
          <a
            href="#"
            title="First Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-double-left i"
            />
          </a>
        </li>
        <li
          class="disabled"
        >
          <a
            href="#"
            title="Previous Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-left i"
            />
          </a>
        </li>
      </ul>
      <label
        class="sr-only control-label"
      >
        Current Page
      </label>
      <input
        class="pagination-pf-page form-control"
        type="text"
        value="1"
      />
      <span>
         of 
        <span
          class="pagination-pf-pages"
        >
          0
        </span>
      </span>
      <ul
        class="pagination pagination-pf-forward"
      >
        <li
          class=""
        >
          <a
            href="#"
            title="Next Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-right i"
            />
          </a>
        </li>
        <li
          class=""
        >
          <a
            href="#"
            title="Last Page"
          >
            <span
              aria-hidden="true"
              class="fa fa-angle-double-right i"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`Patternfly table renders properly 1`] = `
<table
  class="table table-striped table-bordered table-hover"
>
  <thead>
    <tr>
      <th
        class=""
      >
        First Name
      </th>
      <th
        class=""
      >
        Last Name
      </th>
      <th
        class=""
      >
        Username
      </th>
      <th
        class="text-right"
      >
        Commits
      </th>
      <th
        class="text-right"
      >
        Additions
      </th>
      <th
        class="text-center"
      >
        Location
      </th>
      <th
        class=""
      >
        Gender
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class=""
      >
        Dan
      </td>
      <td
        class=""
      >
        Abramov
      </td>
      <td
        class=""
      >
        gaearon
      </td>
      <td
        class="text-right"
      >
        711
      </td>
      <td
        class="text-right"
      >
        272635
      </td>
      <td
        class="text-center"
      >
        London, UK
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Sebastian
      </td>
      <td
        class=""
      >
        Markbåge
      </td>
      <td
        class=""
      >
        sebmarkbage
      </td>
      <td
        class="text-right"
      >
        476
      </td>
      <td
        class="text-right"
      >
        203610
      </td>
      <td
        class="text-center"
      >
        San Francisco, CA
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Sophie
      </td>
      <td
        class=""
      >
        Alpert
      </td>
      <td
        class=""
      >
        sophiebits
      </td>
      <td
        class="text-right"
      >
        828
      </td>
      <td
        class="text-right"
      >
        114467
      </td>
      <td
        class="text-center"
      >
        California
      </td>
      <td
        class=""
      >
        female
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Paul
      </td>
      <td
        class=""
      >
        O’Shannessy
      </td>
      <td
        class=""
      >
        zpao
      </td>
      <td
        class="text-right"
      >
        820
      </td>
      <td
        class="text-right"
      >
        87324
      </td>
      <td
        class="text-center"
      >
        Seattle, WA
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Pete
      </td>
      <td
        class=""
      >
        Hunt
      </td>
      <td
        class=""
      >
        petehunt
      </td>
      <td
        class="text-right"
      >
        205
      </td>
      <td
        class="text-right"
      >
        86685
      </td>
      <td
        class="text-center"
      >
        San Francisco, CA
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Andrew
      </td>
      <td
        class=""
      >
        Clark
      </td>
      <td
        class=""
      >
        acdlite
      </td>
      <td
        class="text-right"
      >
        320
      </td>
      <td
        class="text-right"
      >
        74162
      </td>
      <td
        class="text-center"
      >
        Redwood City, CA
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        class=""
      >
        Nathan
      </td>
      <td
        class=""
      >
        Hunzaker
      </td>
      <td
        class=""
      >
        nhunzaker
      </td>
      <td
        class="text-right"
      >
        77
      </td>
      <td
        class="text-right"
      >
        34504
      </td>
      <td
        class="text-center"
      >
        Durham, NC
      </td>
      <td
        class=""
      >
        male
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`inline edit Inline edit header row renders 1`] = `
<div>
  <div
    class="inline-edit-buttons top bold"
    style="bottom: -3px; right: 10px;"
  >
    <button
      aria-label="Save"
      class="btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-check"
      />
    </button>
    <button
      aria-label="Cancel"
      class="btn btn-default"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-close"
      />
    </button>
  </div>
  <table
    class="table dataTable table-striped table-bordered table-hover pf-table-inline-edit"
    role="grid"
  >
    <thead>
      <tr
        class="editing"
      >
        <th
          class=""
        >
          First Name
        </th>
        <th
          class=""
        >
          Last Name
        </th>
        <th
          class=""
        >
          Username
        </th>
        <th
          class="text-right"
        >
          Commits
        </th>
        <th
          class="text-right"
        >
          Additions
        </th>
        <th
          class="text-center"
        >
          Location
        </th>
        <th
          class=""
        >
          Gender
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          class=""
        >
          Dan
        </td>
        <td
          class=""
        >
          Abramov
        </td>
        <td
          class=""
        >
          gaearon
        </td>
        <td
          class="text-right"
        >
          711
        </td>
        <td
          class="text-right"
        >
          272635
        </td>
        <td
          class="text-center"
        >
          London, UK
        </td>
        <td
          class=""
        >
          male
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`inline edit Inline edit last row renders properly last row 1`] = `
<div>
  <div
    class="inline-edit-buttons top"
    style="bottom: -1px; right: 10px;"
  >
    <button
      aria-label="Save"
      class="btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-check"
      />
    </button>
    <button
      aria-label="Cancel"
      class="btn btn-default"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-close"
      />
    </button>
  </div>
  <table
    class="table dataTable table-striped table-bordered table-hover pf-table-inline-edit"
    role="grid"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          First Name
        </th>
        <th
          class=""
        >
          Last Name
        </th>
        <th
          class=""
        >
          Username
        </th>
        <th
          class="text-right"
        >
          Commits
        </th>
        <th
          class="text-right"
        >
          Additions
        </th>
        <th
          class="text-center"
        >
          Location
        </th>
        <th
          class=""
        >
          Gender
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="editing"
      >
        <td
          class=""
        >
          Dan
        </td>
        <td
          class=""
        >
          Abramov
        </td>
        <td
          class=""
        >
          gaearon
        </td>
        <td
          class="text-right"
        >
          711
        </td>
        <td
          class="text-right"
        >
          272635
        </td>
        <td
          class="text-center"
        >
          London, UK
        </td>
        <td
          class=""
        >
          male
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`inline edit Inline edit row renders properly 1`] = `
<div>
  <div
    class="inline-edit-buttons bottom"
    style="top: -1px; right: 10px;"
  >
    <button
      aria-label="Save"
      class="btn btn-primary"
      type="button"
    >
      <span
        aria-hidden="true"
        class="fa fa-check"
      />
    </button>
    <button
      aria-label="Cancel"
      class="btn btn-default"
      type="button"
    >
      <span
        aria-hidden="true"
        class="pficon pficon-close"
      />
    </button>
  </div>
  <table
    class="table dataTable table-striped table-bordered table-hover pf-table-inline-edit"
    role="grid"
  >
    <thead>
      <tr>
        <th
          class=""
        >
          First Name
        </th>
        <th
          class=""
        >
          Last Name
        </th>
        <th
          class=""
        >
          Username
        </th>
        <th
          class="text-right"
        >
          Commits
        </th>
        <th
          class="text-right"
        >
          Additions
        </th>
        <th
          class="text-center"
        >
          Location
        </th>
        <th
          class=""
        >
          Gender
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="editing"
      >
        <td
          class=""
        >
          Dan
        </td>
        <td
          class=""
        >
          Abramov
        </td>
        <td
          class=""
        >
          gaearon
        </td>
        <td
          class="text-right"
        >
          711
        </td>
        <td
          class="text-right"
        >
          272635
        </td>
        <td
          class="text-center"
        >
          London, UK
        </td>
        <td
          class=""
        >
          male
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
